Use mockposable 0.2-SNAPSHOT

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: 'com.jeppeman.mockposable'
 
 mockposable {
-    plugins = ['mockk']
+    plugins = ['mockk', 'compose-ui']
 }
 
 android {
