--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.jeppeman.mockposable:mockposable-gradle:0.1'
+        classpath 'com.jeppeman.mockposable:mockposable-gradle:0.2-SNAPSHOT'
     }
 }
 
